--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -34,6 +34,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     // Other dependencies
     implementation 'com.opencsv:opencsv:5.6' // I use it to read CSV files
+    implementation 'org.hibernate:hibernate-core:6.2.0.Final'
 }
 
 tasks.named('test') {
