--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // Other dependencies
     implementation 'com.opencsv:opencsv:5.6' // I use it to read CSV files
     implementation 'org.hibernate:hibernate-core:6.2.0.Final'
+    implementation 'com.google.ortools:ortools-java:9.5.2237'
 }
 
 tasks.named('test') {
